--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             transition: opacity 0.5s ease; /* Fade-in effect for smoother appearance */
         }
         .scroll-space {
-            height: 300vh; /* Creates enough space for scrolling */
+            height: 600vh; /* Increase the scroll space to further slow down the animation */
         }
         .button, .logo {
             height: auto;
@@ -90,7 +90,7 @@
     });
 
     // Set the playback speed to slow down the animation
-    lottieAnimation.setSpeed(0.3);
+    lottieAnimation.setSpeed(0.1); // Fine-tune the speed factor as needed
 
     // Disable subframe rendering to prevent skipping or misaligning frames
     lottieAnimation.setSubframe(false);
@@ -128,7 +128,7 @@
                 console.warn('Max scrollable height is zero or negative. Check scroll-space height or body height setting.');
             }
 
-            // Adjust the scroll fraction to ensure smooth and linear playback
+            // Further adjust the fraction to ensure every frame is reached linearly
             const scrollFraction = Math.min(scrollTop / maxScrollTop, 1); // Ensures the fraction doesn't exceed 1
             console.log(`Scroll fraction (scrollTop / maxScrollTop): ${scrollFraction}`);
 
@@ -137,23 +137,13 @@
                 return;
             }
 
-            const frame = Math.min(
-                lottieAnimation.totalFrames * scrollFraction,
-                lottieAnimation.totalFrames - 1
-            );
+            // Round the calculated frame to ensure smooth, linear increments
+            const frame = Math.round(
+                lottieAnimation.totalFrames * scrollFraction
+            ); 
             console.log(`Calculated frame to go to: ${frame}`);
             lottieAnimation.goToAndStop(frame, true);
             console.log(`Animation updated to frame: ${frame}`);
         } else {
             console.error('Animation frames are not available yet or set to zero.');
         }
-    });
-
-    // Listener to check when the animation is completely ready
-    lottieAnimation.addEventListener('complete', () => {
-        console.log('Lottie animation has completed playback.');
-    });
-</script>
-
-</body>
-</html>
