--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 <div id="animation-container">
     <div id="button-container">
         <a href="https://x.com/slickricksolana" target="_blank">
-            <img src="1Butt.png" alt="Button 1" class="button">
+            <img src="$rickAsset 1Butt.png" alt="Button 1" class="button">
         </a>
         <img src="s.png" alt="Slick Rick Logo" class="logo">
         <a href="https://t.me/SlickRickPortal" target="_blank">
-            <img src="2Butt.png" alt="Button 2" class="button">
+            <img src="$rickAsset 2Butt.png" alt="Button 2" class="button">
         </a>
     </div>
 </div>
