--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Site Title -->
+    <title>SLICK RICK</title>
+
+    <!-- Favicon -->
+
+    <!-- Alternative formats for favicon (optional) -->
+    <link rel="icon" href="images/img_3.png" type="image/png">
     <title>Lottie Scroll Animation</title>
     <style>
         body {
